# Vortex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.py  install.sh  premake5.lua  setup.py
Vortex/src/: AppStyle.h  CMakeLists.txt  Camera.cpp  Camera.h  EngineUI.cpp  EngineUI.h  GeneralComments.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  Utils.h  WalnutApp.cpp
Vortex/src/Core/: Application.cpp  Application.h  Constants.h  FileDialog.cpp  FileDialog.h  ImGuiOp.cpp  ImGuiOp.h  Image.cpp  Image.h  LoadingSaving.cpp  LoadingSaving.h  Log.cpp  Log.h  Math.h  Options.cpp  Options.h  ShutDownOperations.cpp  ShutDownOperations.h  Timer.h  Utils.cpp  Utils.h  main.cpp
Vortex/src/Core/CustomImGui/: CustomImGui.cpp  CustomImGui.h
Vortex/src/Core/Input/: Input.h  keycodes.h
Vortex/src/Core/Math/: AffineSpace.h  LinearSpace.h  gdt.h  random.h  vec.h
Vortex/src/Device/: CUDAChecks.h  Denoiser.cpp  Denoiser.h  DeviceVisitor.cpp  DeviceVisitor.h  InteropWrapper.cpp  InteropWrapper.h  KernelInfos.h  OptixWrapper.cpp  OptixWrapper.h  PipelineConfiguration.cpp  WorkQueues.cpp  WorkQueues.h  glFrameBuffer.cpp  glFrameBuffer.h
Vortex/src/Device/CudaFunctions/: ErrorTypes.h  cudaFunctions.cu  cudaFunctions.h
Vortex/src/Device/DevicePrograms/: CudaDebugHelper.h  CudaKernels.h  DataFetcher.h  HitProperties.h  HitPropertiesComputation.h  InlineMdlDeclarations.h  InlineMdlWrapper.h  LaunchParams.h  MdlStructs.h  NoiseData.h  NoiseKernel.h  RayData.h  ToneMapper.h  Utils.h  WavefrontIntegrator.cu  WavefrontIntegrator.h  nvccUtils.h  randomNumberGenerator.h  rendererFunctions.h  texture_lookup.h
Vortex/src/Device/Network/: Network.h
Vortex/src/Device/Structs/: GeometryData.h
Vortex/src/Device/UploadCode/: CUDABuffer.cpp  CUDABuffer.h  CUDABufferManager.cpp  CUDABufferManager.h  CUDAMap.h  DeviceDataCoordinator.cpp  DeviceDataCoordinator.h  DeviceDataMap.cpp  DeviceDataMap.h  UploadBuffers.cpp  UploadBuffers.h  UploadData.h  UploadFunctions.cpp  UploadFunctions.h
Vortex/src/Device/Wrappers/: KernelLaunch.h  KernelTimings.cpp  KernelTimings.h  SOA.cpp  SOA.h  SoaWorkItems.h  WorkItems.h  WorkQueue.h  dWrapper.cpp  dWrapper.h
Vortex/src/Gui/: AppWindow.cpp  AppWindow.h  ExperimentsWindow.cpp  ExperimentsWindow.h  GraphWindow.cpp  GraphWindow.h  GuiProvider.cpp  GuiProvider.h  GuiVisitor.cpp  GuiVisitor.h  GuiWindow.cpp  GuiWindow.h  LoadingSavingWindow.cpp  LoadingSavingWindow.h  NodeEditor.cpp  NodeEditor.h  NodeInfo.h  PlottingWrapper.cpp  PlottingWrapper.h  PropertiesWindow.cpp  PropertiesWindow.h  SceneHierarchyWindow.cpp  SceneHierarchyWindow.h  ShaderGraphWindow.cpp  ShaderGraphWindow.h  ViewportWindow.cpp  ViewportWindow.h  transformInterface.cpp  transformInterface.h
Vortex/src/Gui/GuiElements/: CameraNodeGui.cpp  EnvironmentNodeGui.cpp  ExperimentGui.cpp  GroupNodeGui.cpp  ImageWindowPopUp.cpp  ImageWindowPopUp.h  InstanceNodeGui.cpp  MaterialNodeGui.cpp  MaterialNodeGui.h  MeshNodeGui.cpp  NeuralNetworkGui.cpp  NeuralNetworkGui.h  NodeEditorWrapper.cpp  NodeEditorWrapper.h  PlottingWrapper.cpp  PlottingWrapper.h  RendererNodeGui.cpp  RendererNodeGui.h  SceneGraph.cpp  SceneGraph.h  ShaderNodeGui.cpp  TransformNodeGui.cpp
Vortex/src/Gui/Windows/: AppWindow.cpp  EnvironmentWindow.cpp  EnvironmentWindow.h  ExperimentsWindow.cpp  ExperimentsWindow.h  GraphWindow.cpp  GraphWindow.h  LoadingSavingWindow.cpp  LoadingSavingWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  SceneHierarchyWindow.cpp  SceneHierarchyWindow.h  ShaderGraphWindow.cpp  ShaderGraphWindow.h  ViewportWindow.cpp  ViewportWindow.h
Vortex/src/Layers/: AppLayer.cpp  AppLayer.h  ExperimentsLayer.cpp  ExperimentsLayer.h  GuiLayer.h  MaterialEditorLayer.cpp  MaterialEditorLayer.h  ViewportLayer.cpp  ViewportLayer.h
Vortex/src/Layers/GuiElements/: MaterialNodeGui.cpp  MaterialNodeGui.h  NeuralNetworkGui.cpp  NeuralNetworkGui.h  NodeEditorWrapper.h  PlottingWrapper.cpp  RendererNodeGui.cpp  SceneGraph.cpp  SceneGraph.h
Vortex/src/MDL/: CudaLinker.cpp  CudaLinker.h  MdlTypesName.h  MdlWrapper.cpp  MdlWrapper.h  ShaderOperations.h  ShaderVisitor.cpp  ShaderVisitor.h  materialEditor.cpp  mdlTraversal.cpp  mdlTraversal.h  traversal.cpp
Vortex/src/NeuralNetworks/: Encodings.h  Experiment.cpp  Experiment.h  NetworkImplementation.cu  NetworkImplementation.h  NetworkSettings.h  NeuralNetwork.cpp  NeuralNetwork.cu  NeuralNetwork.h  NeuralNetworkGraphs.h  ReplayBuffer.h  tools.cpp  tools.h
Vortex/src/NeuralNetworks/Config/: DistributionConfig.h  EncodingConfig.h  LossConfig.h  NetworkSettings.h  TrainingBatchConfig.h
Vortex/src/NeuralNetworks/Distributions/: GaussianToSphere.h  Mixture.cpp  Mixture.h  Nasg.cpp  Nasg.h  SphericalGaussian.cpp  SphericalGaussian.h  TransformUtils.cpp  TransformUtils.h
Vortex/src/NeuralNetworks/Interface/: DebugInfo.h  InferenceQueries.cpp  InferenceQueries.h  NetworkInputs.cpp  NetworkInputs.h  NetworkInterface.cpp  NetworkInterface.h  NetworkInterfaceStructs.h  NetworkInterfaceUploader.cpp  NetworkInterfaceUploader.h  NpgTrainingData.cpp  NpgTrainingData.h  Paths.cpp  Paths.h  ReplayBuffer.cpp  ReplayBuffer.h
Vortex/src/NeuralNetworks/Networks/: ActivationMap.h  FullyConnectedNetwork.h  InputComposer.cpp  InputComposer.h  Npg.cpp  Npg.h  PGNet.cpp  PGNet.h  PGNetSettings.h  PathGuidingNetwork.cpp  PathGuidingNetwork.h  Sac.h  TcnnSettings.h
Vortex/src/Scene/: Graph.h  HostVisitor.cpp  HostVisitor.h  Node.cpp  Node.h  NodeTypes.h  SIM.cpp  SIM.h  Scene.cpp  Scene.h  SceneIndexManager.cpp  SceneIndexManager.h  Traversal.cpp  Traversal.h
Vortex/src/Scene/Nodes/: Camera.cpp  Camera.h  EnvironmentLight.cpp  EnvironmentLight.h  Group.cpp  Group.h  Instance.cpp  Instance.h  Light.cpp  Light.h  LightTypes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLight.cpp  MeshLight.h  Renderer.cpp  Renderer.h  Statistics.h  (+3 more)
Vortex/src/Serialization/: ArchiveFunctions.h  ExperimentSerializer.h  MathSerializer.h  NetworkSettingsSerializer.h  NodeSaveData.h  RenderSettingsSerializer.h  Serializer.cpp  Serializer.h
ext/glad/: CMakeLists.txt  glad.lua
ext/glad/src/: glad.c
(+231 files in other folders)
